# embed-fs

./: Cargo.toml
src/: cli.rs  embedding.rs  fuse_mount.rs  main.rs  store.rs
vectorfs_db/: db  snap.0000000000000083
