[package]
name = "embedfs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
fuser = "0.15.1"
libc = "0.2.172"
sled = "0.34.7"
time = "0.3.41"
fastembed = "4.8.0"
